<resources>
    <string name="app_name" translatable="false">curbmap</string>
    <string name="title_activity_maps">curbmap</string>
    <string name="google_maps_key">AIzaSyBrTHZFcJoxkvzmE7pNzY084nhoALrY-lY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="alarm">Alarm</string>
    <string name="your_places">Your Places</string>
    <string name="your_contributions">Your Contributions</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="user">User</string>
    <string name="add_restriction">Add Restriction</string>
    <string name="type_of_restriction">Type of Restriction</string>
    <string name="time_limit_parking">Time Limit Parking</string>
    <string name="no_parking">No Parking</string>
    <string name="no_stopping">No Stopping</string>
    <string name="street_cleaning">Street Cleaning</string>
    <string name="fire_hydrant">Fire Hydrant</string>
    <string name="permit_parking_districts">Permit Parking Districts</string>
    <string name="disabled_parking">Disabled Parking</string>
    <string name="parking_meter">Parking Meter</string>
    <string name="custom_type">Custom Type</string>
    <string name="cost">Cost:</string>
    <string name="dollars">(dollars)</string>
    <string name="per">per</string>
    <string name="minutes">minutes</string>
    <string name="time_limit">Time Limit:</string>
    <string name="enter_custom_type">Enter custom type</string>
    <string name="enter_permit_parking_district">Enter permit parking district</string>
    <string name="days_of_restriction">Days of Restriction</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="length_of_restriction">Length of Restriction</string>
    <string name="all_day">All Day</string>
    <string name="within_hours_of">Within hours of:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="parking_angle">Parking Angle</string>
    <string name="parallel">parallel</string>
    <string name="angled">angled</string>
    <string name="head_in">head in</string>
    <string name="submit">Submit</string>
    <string name="reminder">Reminder</string>
    <string name="add_restriction_explanation">
        Tap on map to add a marker at the start and end location of parking restriction.
        If they are too close, you may just add one marker.
        Then click the ADD RESTRICTION button.</string>
    <string name="warning_no_location">
        You must select a location on the map by tapping the map before adding a restriction.</string>
    <string name="warning_no_type">
        You must select a type of restriction.</string>
    <string name="warning_no_cost">
        If restriction is a Parking Meter you must enter Cost (dollars).</string>
    <string name="warning_no_per">
        If restriction is a Parking Meter you must enter the duration of per ___ minutes.</string>
    <string name="warning_no_time_limit">
        If restriction is a Time Limit Parking, you must enter a time limit.</string>
    <string name="warning_no_custom_type">
        If you choose Custom Type of parking restriction, you must write what the custom type is.</string>
    <string name="warning_no_permit_district">
        If you choose Permit Parking Districts, you must enter a permit parking district.</string>
    <string name="warning_no_days">You must check at least one day for Days of Restriction.</string>
    <string name="warning_no_length">You must select a length of restriction.</string>
    <string name="warning_no_from">You must specify a From: time for Length of Restriction.</string>
    <string name="warning_no_to">You must specify a To: time for Length of Restriction</string>
    <string name="warning_no_angle">You must select a Parking Angle.</string>
    <string name="success_restriction_added">Your restriction was added!</string>
    <string name="info_no_restrictions">
        You have not added any restrictions to Your Contributions.
        To add a restriction, go to Home, tap a location on the map,
        and click the ADD RESTRICTION button.</string>
    <string name="confirm_clear_contributions">
        Do you really want to delete all your contributions?
        This action is permanent and cannot be undone.</string>
    <string name="success_clear_contributions">You have deleted all your contributions.</string>
    <string name="home_address">Home 123 Main St</string>
    <string name="work_address">Work 456 Main St</string>
    <string name="app_tutorial">App Tutorial</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="contact_email">Contact Email</string>
    <string name="version_1_1">Version 1.1</string>
    <string name="terms_amp_privacy"><![CDATA[Terms & Privacy]]></string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="location_data_collection">Location Data Collection</string>
    <string name="link_tutorial">https://github.com/curbmap/curbmap-android/wiki/App-Tutorial</string>
    <string name="link_credits">https://github.com/curbmap/curbmap-android/blob/development/credits.md</string>
    <string name="link_releases">https://github.com/curbmap/curbmap-android/releases</string>
    <string name="link_terms">https://curbmap.com/terms/</string>
    <string name="link_privacy">https://curbmap.com/privacy/</string>
    <string name="link_open_source_licenses">https://github.com/curbmap/curbmap-android/blob/development/credits.md</string>
    <string name="allow_push_notifications">Allow Push Notifications</string>
    <string name="allow_sounds">Allow Sounds</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="voice_search">Voice Search</string>
    <string name="distance_units">Distance Units</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="name">Name</string>
    <string name="someone_email_com">SomeOne@Email.com</string>
    <string name="edit">Edit</string>
    <string name="share_contributions">Share Contributions</string>
    <string name="clear_contributions">Clear Contributions</string>
    <string name="greeting">Hello User!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">email</string>
    <string name="confirm_email">confirm email</string>
    <string name="mi">mi</string>
    <string name="km">km</string>
    <string name="min">min</string>
    <string name="hrs">hrs</string>
    <string name="developer_email">developer@curbmap.com</string>
    <string name="email_subject">curbmap Android Contributions Data</string>
    <string name="prompt_send_email">Share your Contributions</string>
    <string name="error_no_email_clients">There are no email clients installed.</string>
    <string name="description_parallel_image">Image of parallel parked car</string>
    <string name="description_angled_image">Image of angled parked car</string>
    <string name="description_head_in_image">Image of head in parked car</string>
    <string name="description_user_image">User\'s profile picture</string>
    <string name="description_home_icon">Icon of home</string>
    <string name="description_work_icon">Icon of work</string>
    <string name="description_edit_icon">Icon for edit profile picture</string>
    <string name="toggle_icons">Toggle Icons</string>
    <string name="update_map">Update Map</string>
    <string name="warn_select_restriction">You must select at least two locations
        for the restriction by tapping the map at two points to create a line.</string>
    <string name="location_request">Curbmap needs location permissions</string>
    <string name="BASE_URL_API_MAP">https://curbmap.com:50003</string>
    <string name="BASE_URL_API">https://curbmap.com</string>
    <string name="menu_icon">menu icon</string>
    <string name="search_here">Search here</string>
    <string name="info_cancel_select_place">User cancelled operation of selecting a place.</string>
    <string name="sign_out">Sign Out</string>
    <string name="description_logo">Logo of curbmap</string>
    <string name="success_signin">Succeeded in signing in</string>
    <string name="fail_signin">Failed to sign in.</string>
    <string name="issue_signin">Wrong credentials</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="credits">Credits</string>
    <string name="warn_null_restriction">The restriction object is null.</string>
    <string name="add_restriction_photo">Snap Restriction</string>
    <string name="add_restriction_form">Write Restriction</string>
    <string name="clear_map">Clear Map</string>
    <string name="camera_request">curbmap needs camera permissions</string>
    <string name="write_request">curbmap needs permission to write to external storage</string>
    <string name="set_timer">Set Timer</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="uploads">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="cellular_data_uploads">Cellular Data Uploads</string>
    <string name="type00">Short time limit (AKA green, &lt; 1hr)></string>
    <string name="type01">Short time limit metered (AKA green with meter, &lt;1hr)</string>
    <string name="type02">Time limit (&gt;=1hr )</string>
    <string name="type03">Time limit metered (&gt;=1hr)</string>
    <string name="type04">Time limit with permit exemption</string>
    <string name="type05">Time limit metered with permit exemption</string>
    <string name="type06">No parking</string>
    <string name="type07">No parking with permit exemption</string>
    <string name="type08">No stopping</string>
    <string name="type09">Street cleaning</string>
    <string name="type10">Disabled parking</string>
    <string name="type11">Passenger loading (AKA white)</string>
    <string name="type12">Commercial loading (AKA yellow)</string>
    <string name="type13">Other</string>
    <string name="weeks_of_restriction">Weeks of Restriction</string>
    <string name="months_of_restriction">Months of Restriction</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="compassDirection">Compass Direction</string>
    <string name="north">north</string>
    <string name="south">south</string>
    <string name="east">east</string>
    <string name="west">west</string>
    <string name="northeast">northeast</string>
    <string name="northwest">northwest</string>
    <string name="southeast">southeast</string>
    <string name="southwest">southwest</string>
    <string name="type_of_vehicle">Type of Vehicle</string>
    <string name="type_vehicle_n1">Unspecified</string>
    <string name="type_vehicle_0">Car, Truck (2 axel), Non-inhabiting</string>
    <string name="type_vehicle_1">Motorcycle</string>
    <string name="type_vehicle_2">Truck, Bus (3+ axel, including trailer), Non-inhabiting</string>
</resources>